Fix overlapping recipe-title

--- a/index.css
+++ b/index.css
@@ -44,6 +44,7 @@ body {
     font-family: 'Young serif', sans-serif;
     font-size: 2rem;
     color: var(--stone-900);
+    line-height: normal;
 }
 
 .prep-time-section {
@@ -127,4 +128,14 @@ hr {
 
 .nutrition-table td:nth-child(odd) {
     padding-left: 2rem;
+}
+
+@media (max-width: 45rem){
+    body {
+        margin: 0;
+    }
+
+    .recipe-article {
+        border-radius: 0px;
+    }
 }
